# hourglass

./: Cargo.toml  README.md  clippy.toml  justfile
.github/workflows/: main.yml
apps/editor/: Cargo.toml
apps/editor/src/: editor.rs  main.rs
crates/anymap/src/: anymap.rs  lib.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  state.rs
crates/bus/: Cargo.toml
crates/bus/src/: bus.rs  lib.rs
crates/ecs/: Cargo.toml  README.md
crates/ecs/benches/: benchmarks.rs
crates/ecs/examples/: cubes.rs
crates/ecs/src/: lib.rs  resource.rs  vec.rs  world.rs
crates/genvec/: Cargo.toml
crates/genvec/src/: genvec.rs  lib.rs
crates/graph/src/: graph.rs
src/: lib.rs
