[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
anymap = { path = "../anymap" }
genvec = { path = "../genvec" }

[dev-dependencies]
anyhow = "1.0.68"
criterion = { version = "0.4.0", features = ["html_reports"] }
kiss3d = "0.35.0"
nalgebra = "0.30.1"
rand = "0.8.5"

[[bench]]
name = "benchmarks"
harness = false